--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "webpack-livereload-plugin": "^2.2.0"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.123",
     "cordova-android": "^6.4.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-whitelist": "^1.3.3",
     "device": "^0.3.8",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "redux": "^4.0.1",
     "webpack": "^4.30.0"
   },
   "cordova": {
